Design: bug fix

--- a/index.css
+++ b/index.css
@@ -1,7 +1,12 @@
 body {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 a {
@@ -23,7 +28,6 @@ span {
     font-feature-settings: normal;
     font-kerning: auto;
     font-optical-sizing: auto;
-    font-size: 16px;
     font-stretch: 100%;
     font-style: normal;
     font-variant-alternates: normal;
@@ -51,12 +55,12 @@ span {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+
 #head {
     width: 100%;
     background-color: rgb(247, 247, 247);
     height: 64px;
     box-sizing: border-box;
-    border-bottom: 0.2px solid lightgrey;
 }
 
 #head-button {
@@ -100,6 +104,11 @@ button {
     border-radius: 22px;
     background-color: rgb(247, 247, 247);
     color: rgb(34, 34, 34);
+}
+
+.highlight-grey-tall:hover {
+    border-radius: 32px;
+    background-color: rgb(247, 247, 247);
 }
 
 .login-button {
@@ -164,4 +173,40 @@ button {
 
 .z-index1 {
     z-index: 1
+}
+
+.search-upper-text {
+    font-size: 12px;
+    font-weight: 600;
+    padding-bottom: 2px;
+}
+
+.search-below-text {
+    font-size: 14px;
+    font-weight: 400;
+    color: rgb(113, 113, 113);
+}
+
+.search-button {
+    padding: 0px;
+    background-color: rgb(255, 56, 92);
+    color: rgb(255, 255, 255);
+    border: none;
+    border-radius: 50%;
+    margin-right: 8px;
+}
+
+.grey-boundary {
+    height: 32px;
+    border-right: 1px solid rgb(221, 221, 221);
+    align-self: center;
+}
+
+.grey-border {
+    border-top: 0.2px solid rgb(211, 211, 211);
+    border-bottom: 0.2px solid rgb(211, 211, 211);
+}
+
+.search-shadow {
+    box-shadow: 0 3px 12px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.08);
 }
