--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 a {
@@ -18,6 +18,7 @@ a {
 li {
     list-style: none;
 }
+
 
 input:focus {
     outline: none;
@@ -85,6 +86,9 @@ button {
     justify-content: center;
     flex-direction: column;
 }
+
+
+
 
 .flex-vertical-row-align {
     display: flex;
@@ -209,4 +213,39 @@ button {
 
 .search-shadow {
     box-shadow: 0 3px 12px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.08);
+}
+
+.flex-grow-shrink-10 {
+    flex-grow: 1;
+    flex-shrink: 0;
+}
+
+.flex-grow-shrink-01 {
+    flex-grow: 0;
+    flex-grow: 1;
+}
+
+.flex-grow-shrink-00 {
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+
+.nav-item-frame {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    row-gap: 5px;
+    opacity: 0.642534;
+    transition: normal, normal;
+    transition-delay: 0s, 0s;
+    transition-duration: 0.2s, 0.2s;
+    transition-property: opacity, transform;
+    transition-timing-function: cubic-bezier(0.2, 0, 0, 1), cubic-bezier(0.2, 0, 0, 1);
+    border-top: 2px solid transparent;
+    border-bottom: 2px solid transparent;
+}
+
+.nav-item-frame:hover {
+    opacity: 1;
+    border-bottom: 2px solid rgb(221, 221, 221);
 }
