--- a/index.css
+++ b/index.css
@@ -234,6 +234,7 @@ button {
     display: flex;
     flex-direction: column;
     text-align: center;
+    padding: 16px 0px 14px 0px;
     row-gap: 5px;
     opacity: 0.642534;
     transition: normal, normal;
