--- a/index.css
+++ b/index.css
@@ -77,6 +77,7 @@ span {
 button {
     cursor: pointer;
 }
+
 /*  */
 
 /* button 관련 */
@@ -101,6 +102,7 @@ button {
     border: 1px solid rgb(221, 221, 221);
     border-top-left-radius: 12px;
     border-radius: 12px;
+    padding: 12px 0px;
 }
 
 .transparent-button {
@@ -116,6 +118,14 @@ button {
     border: none;
     border-radius: 50%;
     margin-right: 8px;
+}
+
+.heart-button {
+    width: fit-content;
+    position: absolute;
+    top: 35px;
+    left: 300px;
+    z-index: 1;
 }
 
 
@@ -173,28 +183,43 @@ button {
     flex-grow: 0;
     flex-shrink: 0;
 }
+
 /*  */
 
 /* text 관련 */
 
-.head-text {
+.text-16px {
     color: rgb(34, 34, 34);
     font-size: 16px;
     font-weight: 600;
     text-align: center;
 }
 
-.sub-text {
+.text-14px {
     color: rgb(34, 34, 34);
     font-size: 14px;
     font-weight: 600;
     text-align: center;
 }
 
-.filter-text {
+.text-12px {
     color: rgb(34, 34, 34);
     font-size: 12px;
     font-weight: 600;
+    text-align: center;
+}
+
+.text-16px-grey {
+    color: #717171;
+    font-size: 16px;
+    font-weight: 400;
+    text-align: center;
+}
+
+.text-14px-grey {
+    color: #717171;
+    font-size: 14px;
+    font-weight: 400;
     text-align: center;
 }
 
@@ -209,9 +234,12 @@ button {
     font-weight: 400;
     color: rgb(113, 113, 113);
 }
+
 /*  */
 
-
+.text-align-left {
+    text-align: left;
+}
 
 .highlight-grey:hover {
     border-radius: 22px;
@@ -221,7 +249,13 @@ button {
 
 .highlight-grey-tall:hover {
     border-radius: 32px;
-    background-color: rgb(247, 247, 247);
+    background-color: rgb(240, 240, 240);
+}
+
+.hide-right-boundary:hover {
+    height: 32px;
+    border-right: 22px solid white;
+    align-self: center;
 }
 
 .block-row-center {
@@ -239,10 +273,6 @@ button {
 .z-index1 {
     z-index: 1
 }
-
-
-
-
 
 .grey-boundary {
     height: 32px;
@@ -280,4 +310,9 @@ button {
 .nav-item-frame:hover {
     opacity: 1;
     border-bottom: 2px solid rgb(221, 221, 221);
+}
+
+.round-image {
+    border-radius: 12px;
+    border: 1px solid transparent;
 }
