--- a/index.css
+++ b/index.css
@@ -9,15 +9,15 @@
     .list-grid-container {
         grid-template-columns: repeat(2, 1fr);
     }
-    
+
 }
 
 @media screen and (min-width: 950px) {
     .list-grid-container {
         grid-template-columns: repeat(3, 1fr);
     }
-    
-    
+
+
 }
 
 @media screen and (min-width: 1128px) {
@@ -222,6 +222,14 @@ button {
     flex-shrink: 0;
 }
 
+.flex-explanation-container {
+    display: flex;
+    flex-basis: 100%;
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex-direction: column;
+}
+
 /*  */
 
 /* grid 관련 */
@@ -235,29 +243,33 @@ button {
 
 .list-explanation-grid-container {
     display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: minmax(0,1fr) max-content;
+    grid-template-rows: 19px 19px 19px 25px;
     grid-auto-flow: column;
-    align-items: center;
     margin-top: 8px;
-    overflow: hidden;
+    column-gap: 8px;
+    row-gap: 2px;
 }
 
-.list-explanation-grid-item {
+.list-explanation-grid-container > div {
+    overflow-x: clip;
+    overflow-y: clip;
+    text-overflow: ellipsis;
     text-align: left;
 }
 
-.list-explanation-grid-item:nth-child(2) {
+
+.list-explanation-grid-container > div:nth-child(2) {
     grid-column: 1 / 3;
     grid-row: 2 / 3;
 }
 
-.list-explanation-grid-item:nth-child(3) {
+.list-explanation-grid-container > div:nth-child(3) {
     grid-column: 1 / 3;
     grid-row: 3 / 4;
 }
 
-.list-explanation-grid-item:nth-child(4) {
+.list-explanation-grid-container > div:nth-child(4) {
     grid-column: 1 / 3;
     grid-row: 4 / 5;
 }
@@ -284,7 +296,7 @@ button {
     color: rgb(113, 113, 113);
     font-size: 15px;
     font-weight: 400;
-    text-align: left;
+    text-align: center;
 }
 
 .text-15px-400 {
@@ -323,6 +335,7 @@ button {
 .text-align-left {
     text-align: left;
 }
+
 /*  */
 
 
