Design: seemore button

--- a/index.css
+++ b/index.css
@@ -185,6 +185,16 @@ button {
     fill: rgb(255, 56, 92);
 }
 
+.search-more-button {
+    padding: 14px 24px;
+    border-radius: 8px;
+    border-width: 0px;
+    background-color: rgb(34, 34, 34);
+    color: rgb(255, 255, 255);
+    font-size: 16px;
+    font-weight: 600;
+}
+
 
 /*  */
 
@@ -296,6 +306,13 @@ button {
 /*  */
 
 /* text 관련 */
+
+.text-18px-600 {
+    color: rgb(34, 34, 34);
+    font-size: 18px;
+    font-weight: 600;
+    text-align: center;
+}
 
 .text-16px-600 {
     color: rgb(34, 34, 34);
