--- a/index.css
+++ b/index.css
@@ -259,6 +259,37 @@ button {
     flex-direction: column;
 }
 
+.flex-left-align {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.flex-left-align>button {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    padding: 10px;
+    margin: 6px 6px 6px 0px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #717171;
+}
+
+.flex-left-align>button {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    padding: 10px;
+    margin: 6px 6px 6px 0px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #717171;
+}
+
+.flex-left-align>button:first-child {
+    margin-left: -10px;
+}
+
 /*  */
 
 /* grid 관련 */
@@ -272,7 +303,7 @@ button {
 
 .list-explanation-grid-container {
     display: grid;
-    grid-template-columns: minmax(0,1fr) max-content;
+    grid-template-columns: minmax(0, 1fr) max-content;
     grid-template-rows: 19px 19px 19px 25px;
     grid-auto-flow: column;
     margin-top: 8px;
@@ -280,7 +311,7 @@ button {
     row-gap: 2px;
 }
 
-.list-explanation-grid-container > div {
+.list-explanation-grid-container>div {
     overflow-x: clip;
     overflow-y: clip;
     text-overflow: ellipsis;
@@ -288,19 +319,27 @@ button {
 }
 
 
-.list-explanation-grid-container > div:nth-child(2) {
+.list-explanation-grid-container>div:nth-child(2) {
     grid-column: 1 / 3;
     grid-row: 2 / 3;
 }
 
-.list-explanation-grid-container > div:nth-child(3) {
+.list-explanation-grid-container>div:nth-child(3) {
     grid-column: 1 / 3;
     grid-row: 3 / 4;
 }
 
-.list-explanation-grid-container > div:nth-child(4) {
+.list-explanation-grid-container>div:nth-child(4) {
     grid-column: 1 / 3;
     grid-row: 4 / 5;
+}
+
+.recommand-list-grid-container {
+    display: grid;
+    grid-auto-flow: column;
+    padding-top: 32px;
+    column-gap: 8px;
+    row-gap: 24px;
 }
 
 /*  */
@@ -413,6 +452,13 @@ button {
     height: 32px;
     border-right: 1px solid rgb(221, 221, 221);
     align-self: center;
+}
+
+.short-grey-boundary {
+    background-color: rgb(221, 221, 221);
+    box-sizing: border-box;
+    color: rgb(34, 34, 34);
+    height: 1px
 }
 
 .grey-border {
