--- a/flex.css
+++ b/flex.css
@@ -1,51 +1,63 @@
-.display-flex {
+/* flex */
+.flex-container {
     display: flex;
 }
 
-.flex-center {
-    display: flex;
-    justify-content: center;
+/* flex-direction: 모든 아이템의 방향 설정 */
+.flex-row {
+    flex-direction: row;
 }
-
-.space-between {
-    display: flex;
-    justify-content: space-between;
-}
-
-.flex-vertical-column-align {
-    display: flex;
-    justify-content: center;
+.flex-column {
     flex-direction: column;
 }
 
-.flex-vertical-row-align {
-    display: flex;
+/* justify-content: 모든 아이템에 대한 수평 배치 방법 설정 */
+
+.justify-content-start {
+    justify-content: start;
+}
+.justify-content-end {
+    justify-content: end;
+}
+.justify-content-center {
+    justify-content: center;
+}
+.justify-content-between {
     justify-content: space-between;
+}
+.justify-content-around {
+    justify-content: space-around;
+}
+
+/* align-items: 모든 아이템에 대한 수직 배치 방법 설정 */
+.align-items-start {
+    align-items: flex-start;
+}
+.align-items-end {
+    align-items: flex-end;
+}
+.align-items-center {
     align-items: center;
 }
-
-.flex-start {
-    display: flex;
-    justify-content: flex-start;
+.align-items-baseline {
+    align-items: baseline;
+}
+.align-items-stretch {
+    align-items: stretch;
 }
 
-.flex-end {
-    display: flex;
-    justify-content: flex-end;
-}
+/* flex grow, flex shrink: 아이템의 크기를 조정 */
 
-.flex-grow-shrink-10 {
-    flex-grow: 1;
-    flex-shrink: 0;
-}
-
-.flex-grow-shrink-01 {
-    flex-grow: 0;
+.flex-grow-1 {
     flex-grow: 1;
 }
-
-.flex-grow-shrink-00 {
+.flex-grow-0 {
     flex-grow: 0;
+}
+.flex-shrink-1 {
+    flex-shrink: 1;
+}
+.flex-shrink-0 {
     flex-shrink: 0;
 }
 
@@ -55,11 +67,6 @@
     flex-grow: 1;
     flex-shrink: 0;
     flex-direction: column;
-}
-
-.flex-left-align {
-    display: flex;
-    justify-content: flex-start;
 }
 
 .flex-left-align>button {
