--- a/basic_element.css
+++ b/basic_element.css
@@ -1,13 +1,14 @@
-body {
-    margin: 0;
-    padding: 0;
-}
-
 *,
 *::before,
 *::after {
     box-sizing: border-box;
 }
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
 
 a {
     color: inherit;
@@ -17,11 +18,9 @@ a {
 
 ul {
     list-style: none;
-    margin: 0; 
+    margin: 0;
     padding: 0;
 }
-
-
 
 li {
     list-style: none;
@@ -70,4 +69,9 @@ span {
 
 button {
     cursor: pointer;
+}
+
+header {
+    width: 100%;
+    background-color: rgb(247, 247, 247);
 }
