--- a/text.css
+++ b/text.css
@@ -1,71 +1,46 @@
-.text-18px-600 {
-    color: rgb(34, 34, 34);
-    font-size: 18px;
-    font-weight: 600;
+/* text 수평 정렬 방식 */
+.text-center {
     text-align: center;
 }
+.text-left {
+    text-align: left;
+}
 
-.text-16px-600 {
-    color: rgb(34, 34, 34);
+/* font 사이즈 */
+.font-10px {
+    font-size: 10px;
+}
+.font-12px {
+    font-size: 12px;
+}
+.font-14px {
+    font-size: 14px;
+}
+.font-15px {
+    font-size: 15px;
+}
+.font-16px {
     font-size: 16px;
-    font-weight: 600;
-    text-align: center;
+}
+.font-18px {
+    font-size: 18px;
+}
+.font-22px {
+    font-size: 22px;
 }
 
-.text-15px-600 {
+/* font 굵기 */
+.font-400 {
+    font-weight: 400;
+}
+.font-600 {
+    font-weight: 600;
+}
+
+/* font 색상 */
+.font-black {
     color: rgb(34, 34, 34);
-    font-size: 15px;
-    font-weight: 600;
-    text-align: center;
 }
-
-.text-15px-400-grey {
+.font-grey {
     color: rgb(113, 113, 113);
-    font-size: 15px;
-    font-weight: 400;
-    text-align: center;
-}
-
-.text-15px-400 {
-    color: rgb(34, 34, 34);
-    font-size: 15px;
-    font-weight: 400;
-    text-align: center;
-}
-
-.text-14px-600 {
-    color: rgb(34, 34, 34);
-    font-size: 14px;
-    font-weight: 600;
-    text-align: center;
-}
-
-.text-14px-400 {
-    color: rgb(34, 34, 34);
-    font-size: 14px;
-    font-weight: 400;
-    text-align: left;
-}
-
-.text-12px-600 {
-    color: rgb(34, 34, 34);
-    font-size: 12px;
-    font-weight: 600;
-    text-align: center;
-}
-
-.search-upper-text {
-    font-size: 12px;
-    font-weight: 600;
-    padding-bottom: 2px;
-}
-
-.search-below-text {
-    font-size: 14px;
-    font-weight: 400;
-    color: rgb(113, 113, 113);
-}
-
-.text-align-left {
-    text-align: left;
 }
