--- a/flex.css
+++ b/flex.css
@@ -61,6 +61,9 @@
     flex-shrink: 0;
 }
 
+
+
+/*  */
 .flex-explanation-container {
     display: flex;
     flex-basis: 100%;
@@ -69,7 +72,7 @@
     flex-direction: column;
 }
 
-.flex-left-align>button {
+.recommand-travel-list>button {
     background-color: transparent;
     border: none;
     outline: none;
@@ -80,17 +83,6 @@
     color: #717171;
 }
 
-.flex-left-align>button {
-    background-color: transparent;
-    border: none;
-    outline: none;
-    padding: 10px;
-    margin: 6px 6px 6px 0px;
-    font-size: 14px;
-    font-weight: 600;
-    color: #717171;
-}
-
-.flex-left-align>button:first-child {
+.recommand-travel-list>button:first-child {
     margin-left: -10px;
 }
