--- a/flex.css
+++ b/flex.css
@@ -1,11 +1,17 @@
-/* flex */
+/* flex-container */
 .flex-container {
     display: flex;
+}
+.inline-flex-container {
+    display: inline-flex;
 }
 
 /* flex-direction: 모든 아이템의 방향 설정 */
 .flex-row {
     flex-direction: row;
+}
+.flex-row-reverse {
+    flex-direction: row-reverse;
 }
 .flex-column {
     flex-direction: column;
