--- a/text.css
+++ b/text.css
@@ -6,6 +6,11 @@
     text-align: left;
 }
 
+/* text 수직 정렬 방식 */
+.text-vertical-center {
+    vertical-align: center;
+}
+
 /* font 사이즈 */
 .font-10px {
     font-size: 10px;
