--- a/button.css
+++ b/button.css
@@ -61,3 +61,17 @@
     font-size: 16px;
     font-weight: 600;
 }
+
+.recommand-travel-list>button {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    padding: 10px;
+    margin: 6px 6px 6px 0px;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.recommand-travel-list>button:first-child {
+    margin-left: -10px;
+}
