--- a/css/flex.css
+++ b/css/flex.css
@@ -66,6 +66,12 @@
 .flex-shrink-0 {
     flex-shrink: 0;
 }
+.flex-basis-zero {
+    flex-basis: 0%;
+}
+.flex-basis-auto {
+    flex-basis: auto;
+}
 
 
 
