--- a/css/text.css
+++ b/css/text.css
@@ -60,3 +60,9 @@
 .line-height-basic {
     line-height: 20.02px;
 }
+.line-height-18px {
+    line-height: 18px;
+}
+.line-height-16px {
+    line-height: 16px;
+}
