--- a/css/basic_element.css
+++ b/css/basic_element.css
@@ -67,6 +67,38 @@ span {
     white-space: nowrap;
 }
 
+.text {
+    font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
+    font-feature-settings: normal;
+    font-kerning: auto;
+    font-optical-sizing: auto;
+    font-stretch: 100%;
+    font-style: normal;
+    font-variant-alternates: normal;
+    font-variant-caps: normal;
+    font-variant-east-asian: normal;
+    font-variant-ligatures: normal;
+    font-variant-numeric: normal;
+    font-variant-position: normal;
+    font-variation-settings: normal;
+    letter-spacing: -0.32px;
+    line-break: strict;
+    line-height: 20.02px;
+    text-indent: 0px;
+    text-rendering: auto;
+    text-shadow: none;
+    text-size-adjust: 100%;
+    text-transform: none;
+    text-underline-offset: 2px;
+    text-wrap: wrap;
+    white-space-collapse: preserve-breaks;
+    word-break: keep-all;
+    word-spacing: 0px;
+    -webkit-font-smoothing: antialiased;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    white-space: nowrap;
+}
+
 button {
     cursor: pointer;
     border-width: 0px;
