--- a/css/layout.css
+++ b/css/layout.css
@@ -128,6 +128,7 @@
     border: 1px solid rgb(221, 221, 221);
 }
 
+
 .transparent-border {
     border: 1px solid rgba(0, 0, 0, 0);
 }
@@ -159,7 +160,7 @@
     background-color: rgb(221, 221, 221);
 }
 
-/*  */
+/* shadow */
 .search-shadow {
     box-shadow: 0 3px 12px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.08);
 }
