--- a/css/etc.css
+++ b/css/etc.css
@@ -21,3 +21,6 @@ ul[class="recommand-list-grid-container"]>li>a>span:last-child {
     text-decoration: underline;
 }
 
+.pointer-none {
+    pointer-events: none;
+}
