--- a/css/layout.css
+++ b/css/layout.css
@@ -61,6 +61,9 @@
 .padding-16 {
     padding: 16px;
 }
+.padding-bottom-2 {
+    padding-bottom: 2px;
+}
 
 /* margin */
 .margin-top-12 {
@@ -88,6 +91,18 @@
 }
 .z-index-1 {
     z-index: 1
+}
+.z-index-2 {
+    z-index: 2;
+}
+.z-index-3 {
+    z-index: 3;
+}
+.z-index-10 {
+    z-index: 10;
+}
+.z-index-100 {
+    z-index: 100;
 }
 
 /* position */
@@ -168,7 +183,7 @@
 
 /* shadow */
 .search-shadow {
-    box-shadow: 0 3px 12px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.08);
+    box-shadow: 0 3px 12px 0 rgba(0,0,0,0.1), 0 1px 2px 0 rgba(0,0,0,0.08);
 }
 
 
