--- a/css/button.css
+++ b/css/button.css
@@ -21,12 +21,22 @@
 }
 
 .search-button {
-    padding: 0px;
     background-color: rgb(255, 56, 92);
     color: rgb(255, 255, 255);
     border: none;
-    border-radius: 50%;
-    margin-right: 8px;
+    border-radius: 24px;
+    cursor: pointer;
+    display: inline-block;
+    width: 48px;
+    max-width: 48px;
+    height: 48px;
+    overflow: hidden;
+    transition-behavior: normal;
+    transition-delay: 0s;
+    transition-duration: 0.2s;
+    transition-property: max-width;
+    transition-timing-function: cubic-bezier(0.2, 0, 0, 1);
+    vertical-align: middle;
 }
 
 .heart-button {
