--- a/css/layout.css
+++ b/css/layout.css
@@ -29,6 +29,9 @@
 .height-full {
     height: 100%;
 }
+.height-auto {
+    height: auto;
+}
 
 /* width */
 .width-full {
@@ -42,6 +45,9 @@
 .padding-0 {
     padding: 0px;
 }
+.padding-1 {
+    padding: 1px;
+}
 .padding-top-12 {
     padding-top: 12px;
 }
@@ -50,6 +56,9 @@
 }
 .padding-14-32 {
     padding: 14px 32px;
+}
+.padding-14-24 {
+    padding: 14px 24px;
 }
 .padding-48-0 {
     padding-top: 48px;
@@ -149,13 +158,16 @@
     border: 1px solid rgb(221, 221, 221);
 }
 
-
 .transparent-border {
     border: 1px solid rgba(0, 0, 0, 0);
 }
 
 .no-border {
     border: none;
+}
+
+.border-width-1 {
+    border: 1px;
 }
 
 .grey-border-bottom {
@@ -172,7 +184,7 @@
     border-top: 0.727273px solid rgb(221, 221, 221);
 }
 
-/* background 색 */
+/* background*/
 .background-color-basic {
     background-color: rgb(255, 255, 255);
 }
@@ -180,6 +192,15 @@
 .background-color-221 {
     background-color: rgb(221, 221, 221);
 }
+
+.background-color-none {
+    background-color: none;
+}
+
+.background-padding-box {
+    background-clip: padding-box;
+}
+
 
 /* shadow */
 .search-shadow {
