Docs: organize css files

--- a/css/animation.css
+++ b/css/animation.css
@@ -1,153 +1,4 @@
-.highlight-grey-247:hover {
-    background-color: rgb(247, 247, 247);
-}
-
-.highlight-grey-240:hover {
-    background-color: rgb(240, 240, 240);
-}
-
-.highlight-grey-235:hover {
-    background-color: rgb(235, 235, 235);
-}
-
-.experience-link:hover {
-    color: rgb(34, 34, 34);
-}
-
-.hover-underline:hover {
-    text-decoration: underline;
-}
-
-.selected-button-highlight::after {
-    position: absolute;
-    height: 2px;
-    width: calc(100% - 20px);
-    bottom: -6px;
-    left: 10px;
-    background-color: rgb(34, 34, 34);
-    content: "";
-}
-
-.scale-transition {
-    transition-property: transform, background-color, border-color;
-    transition-duration: 0.15s;
-    transition-timing-function: cubic-bezier(0.2, 0, 0, 1);
-}
-
-.scale-92:active {
-    transform: scale(.92);
-}
-
-.active-black-border-000:active {
-    border-color: rgb(0, 0, 0);
-}
-
-.active-black-border-000:hover {
-    border-color: rgb(0, 0, 0);
-}
-
-.visibility-hidden {
-    visibility: hidden;
-}
-
-.hide-dividing-line-start:hover::before {
-    height: 32px;
-    border-right: 1px solid rgb(255, 255, 255);
-    align-self: center;
-    position: absolute;
-    top: 33px;
-    right: 0px;
-    margin-top: -16px;
-    content: "";
-}
-.hide-dividing-line-start::after {
-    background-clip: padding-box;
-    border-radius: 32px;
-    border: 1px solid rgba(0, 0, 0, 0);
-    content: "";
-    cursor: pointer;
-    display: block;
-    pointer-events: auto;
-    position: absolute;
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    z-index: 0;
-    margin-right: 2px;
-}
-.hide-dividing-line-start:hover::after {
-    background-color: rgb(235, 235, 235);
-}
-
-
-
-.hide-dividing-line-middle:hover::before {
-    height: 32px;
-    border-right: 1px solid rgb(255, 255, 255);
-    border-left: 1px solid rgb(255, 255, 255);
-    align-self: center;
-    position: absolute;
-    top: 33px;
-    right: -1px;
-    left: -1px;
-    margin-top: -16px;
-    content: "";
-}
-.hide-dividing-line-middle::after {
-    background-clip: padding-box;
-    border-radius: 32px;
-    border: 1px solid rgba(0, 0, 0, 0);
-    content: "";
-    cursor: pointer;
-    display: block;
-    pointer-events: auto;
-    position: absolute;
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    z-index: 0;
-}
-.hide-dividing-line-middle:hover::after {
-    background-color: rgb(235, 235, 235);
-}
-
-
-
-
-
-
-
-
-.hide-dividing-line-end:hover::before {
-    height: 32px;
-    border-right: 1px solid rgb(255, 255, 255);
-    align-self: center;
-    position: absolute;
-    top: 33px;
-    left: 0px;
-    margin-top: -16px;
-    content: "";
-}
-
-.hide-dividing-line-end::after {
-    background-clip: padding-box;
-    border-radius: 32px;
-    border: 1px solid rgba(0, 0, 0, 0);
-    content: "";
-    cursor: pointer;
-    position: absolute;
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    z-index: 0;
-    margin-left: 2px;
-    pointer-events: auto;
-    user-select: auto;
-}
-
-.hide-dividing-line-end:hover::after {
-    background-color: rgb(235, 235, 235);
+/* shadow */
+.search-shadow {
+    box-shadow: 0 3px 12px 0 rgba(0,0,0,0.1), 0 1px 2px 0 rgba(0,0,0,0.08);
 }
