--- a/css/basic_element.css
+++ b/css/basic_element.css
@@ -4,6 +4,17 @@
     box-sizing: border-box;
 }
 
+header::after {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 162px;
+    background-color: rgb(255, 255, 255);
+    content: "";
+    z-index: 0;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -103,3 +114,5 @@ button {
     border-width: 0px;
     padding: 0px;
 }
+
+
