--- a/css/flex.css
+++ b/css/flex.css
@@ -18,7 +18,6 @@
 }
 
 /* justify-content: 모든 아이템에 대한 수평 배치 방법 설정 */
-
 .justify-content-start {
     justify-content: start;
 }
@@ -53,7 +52,6 @@
 }
 
 /* flex grow, flex shrink: 아이템의 크기를 조정 */
-
 .flex-grow-1 {
     flex-grow: 1;
 }
@@ -72,15 +70,7 @@
 .flex-basis-auto {
     flex-basis: auto;
 }
-
-
-
-/*  */
-.flex-explanation-container {
-    display: flex;
+.flex-basis-full {
     flex-basis: 100%;
-    flex-grow: 1;
-    flex-shrink: 0;
-    flex-direction: column;
 }
 
