--- a/css/grid.css
+++ b/css/grid.css
@@ -106,3 +106,11 @@ ul[class="recommand-list-grid-container"]>li>a>span:last-child {
 .footer-upper-list-grid-container > li > a:hover {
     text-decoration: underline;
 }
+
+.date-tab-grid-container {
+    display: grid;
+    grid-auto-columns: 1fr;
+    grid-auto-flow: column;
+    max-width: 400px;
+    min-width: 303px;
+}
