--- a/css/interaction.css
+++ b/css/interaction.css
@@ -15,6 +15,9 @@
 }
 
 /* hover하면 배경 하이라이트 */
+.highlight-grey-221:hover {
+    background-color: rgb(221, 221, 221);
+}
 .highlight-grey-235:hover {
     background-color: rgb(235, 235, 235);
 }
