--- a/css/layout.css
+++ b/css/layout.css
@@ -13,6 +13,9 @@
 .background-color-221 {
     background-color: rgb(221, 221, 221);
 }
+.background-color-235 {
+    background-color: rgb(235, 235, 235);
+}
 .background-color-247 {
     background-color: rgb(247, 247, 247);
 }
@@ -80,6 +83,9 @@
 .padding-top-12 {
     padding-top: 12px;
 }
+.padding-0-4 {
+    padding: 0px 4px;
+}
 .padding-0-24 {
     padding: 0px 24px;
 }
@@ -94,6 +100,9 @@
 }
 .padding-14-24 {
     padding: 14px 24px;
+}
+.padding-16-32 {
+    padding: 16px 32px;
 }
 .padding-48-0 {
     padding-top: 48px;
@@ -210,6 +219,9 @@
 }
 .radius-32 {
     border-radius: 32px;
+}
+.radius-100 {
+    border-radius: 100px;
 }
 
 /* border */
